--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <h1>Destacados de hoy</h1>
 
 <div class="slideshow-container ocultarmovil">
-  <a href="controlador.php?accion=producto&id=1&producto=##1##">
+  <a href="controlador.php?accion=producto&id=1&producto=##link1##">
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
       <img src="##imagen1##">
@@ -10,7 +10,7 @@
     </div>
   </a>
 
-  <a href="controlador.php?accion=producto&id=1&producto=##2##">
+  <a href="controlador.php?accion=producto&id=1&producto=##link2##">
     <div class="mySlides fade">
       <div class="numbertext">2 / 5</div>
       <img src="##imagen2##">
@@ -19,7 +19,7 @@
     </div>
   </a>
 <!-- http://placehold.it/1000x300 -->
-  <a href="controlador.php?accion=producto&id=1&producto=##3##">
+  <a href="controlador.php?accion=producto&id=1&producto=##link3##">
     <div class="mySlides fade">
       <div class="numbertext">3 / 5</div>
       <img src="##imagen3##">
@@ -28,7 +28,7 @@
     </div>
   </a>
 
-  <a href="controlador.php?accion=producto&id=1&producto=##4##">
+  <a href="controlador.php?accion=producto&id=1&producto=##link4##">
     <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
       <img src="##imagen4##">
@@ -37,7 +37,7 @@
     </div>
   </a>
 
-  <a href="controlador.php?accion=producto&id=1&producto=##5##">
+  <a href="controlador.php?accion=producto&id=1&producto=##link5##">
     <div class="mySlides fade">
       <div class="numbertext">5 / 5</div>
       <img src="##imagen5##">
