--- a/templates/producto.html
+++ b/templates/producto.html
@@ -1,6 +1,6 @@
 <h1>##nombre##</h1>
 <h1 id="idproducto">##idproducto##</h1>
-<div class="slideshow-container ocultarmovil">
+<div class="slideshow-container ocultarmovil carrouselprod">
   ##imagenes##
 </div>
 <h2>Descripción</h2>
