--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/static/images/logoesquina.ico">
+  <link rel="icon" type="image/png" href="/static/images/logoesquina192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="/static/images/logoesquina180.png" sizes="180x180">
   <title>##titulo##</title>
 </head>
 
