--- a/templates/core/header.html
+++ b/templates/core/header.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
   <link rel="shortcut icon" type="image/x-icon" href="/static/images/logoesquina.ico">
   <link rel="icon" type="image/png" href="/static/images/logoesquina192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/static/images/logoesquina32.png" sizes="32x32">
   <link rel="apple-touch-icon" href="/static/images/logoesquina180.png" sizes="180x180">
   <title>##titulo##</title>
 </head>
