destacar en admin

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,5 +1,6 @@
 <div id="admin-navigation-bar" class="admin-navigation-bar">
   <a href="controlador.php?accion=nuevo&id=1"><button class="botonesbonitos">Añadir nuevo producto</button></a>
   <a href="controlador.php?accion=modificar&id=1"><button class="botonesbonitos">Modificar productos</button></a>
+  <a href="controlador.php?accion=destacados&id=1"><button class="botonesbonitos">Gestionar destacados</button></a>
 
 </div>
