--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <a href="controlador.php?accion=producto&id=1&producto=##link1##">
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
-      <img src="##imagen1##">
+      <img src="##imagen1##''>
       <div class="textderecha">##p1##</div>
       <div class="text">##1##</div>
     </div>
