--- a/templates/producto.html
+++ b/templates/producto.html
@@ -1,5 +1,21 @@
 <h1>##nombre##</h1>
 <h1 id="idproducto">##idproducto##</h1>
+<!-- TODO: MOdificar por Modal con medianas y pequeñas -->
+<!-- <div class="row">
+  <div class="column">
+    <img src="img1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img src="img2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img src="img3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
+  </div>
+  <div class="column">
+    <img src="img4.jpg" onclick="openModal();currentSlide(4)" class="hover-shadow">
+  </div>
+</div> -->
+
 <div id="myModal" class="modal">
   <span class="close cursor" onclick="closeModal()">&times;</span>
   <div class="modal-content">
