cambio proveedor placeholder, inputs más grandes en móvil

--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -52,7 +52,7 @@
 					for (var i = 0; i < datos.length; i++) {
 						cadena = cadena + "<tr><td><a href='controlador.php?accion=producto&id=1&producto=" + datos[i][0] + "'>";
 						if (datos[i][3] == null)
-							cadena = cadena + "<img src=http://placehold.it/100x80></a></td>";
+							cadena = cadena + "<img src=http://dummyimage.com/100x80></a></td>";
 						else
 							cadena = cadena + "<img src=/static/images/catalogo/" + datos[i][3] + "></a></td>";
 						cadena = cadena + "<td>" + datos[i][1] + "</td>";
