--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <h1>Destacados de hoy</h1>
 
-<div class="slideshow-container ocultarmovil">
+<div class="slideshow-container ocultarmovil carrouselprod">
   <a href="controlador.php?accion=producto&id=1&producto=##link1##">
     <div class="mySlides fade">
       <div class="numbertext">1 / 5</div>
-      <img src="##imagen1##''>
+      <img class="imgcarcentrada" src="##imagen1##'" >
       <div class="textderecha">##p1##</div>
       <div class="text">##1##</div>
     </div>
@@ -13,7 +13,7 @@
   <a href="controlador.php?accion=producto&id=1&producto=##link2##">
     <div class="mySlides fade">
       <div class="numbertext">2 / 5</div>
-      <img src="##imagen2##">
+      <img class="imgcarcentrada" src="##imagen2##">
       <div class="textderecha">##p2##</div>
       <div class="text">##2##</div>
     </div>
@@ -22,7 +22,7 @@
   <a href="controlador.php?accion=producto&id=1&producto=##link3##">
     <div class="mySlides fade">
       <div class="numbertext">3 / 5</div>
-      <img src="##imagen3##">
+      <img class="imgcarcentrada" src="##imagen3##">
       <div class="textderecha">##p3##</div>
       <div class="text">##3##</div>
     </div>
@@ -31,7 +31,7 @@
   <a href="controlador.php?accion=producto&id=1&producto=##link4##">
     <div class="mySlides fade">
       <div class="numbertext">4 / 5</div>
-      <img src="##imagen4##">
+      <img class="imgcarcentrada" src="##imagen4##">
       <div class="textderecha">##p4##</div>
       <div class="text">##4##</div>
     </div>
@@ -40,7 +40,7 @@
   <a href="controlador.php?accion=producto&id=1&producto=##link5##">
     <div class="mySlides fade">
       <div class="numbertext">5 / 5</div>
-      <img src="##imagen5##">
+      <img class="imgcarcentrada" src="##imagen5##">
       <div class="textderecha">##p5##</div>
       <div class="text">##5##</div>
     </div>
