--- a/static/css/style.css
+++ b/static/css/style.css
@@ -385,14 +385,14 @@ html, body {
 /* Slideshow container */
 
 .slideshow-container {
-     max-width: 1000px;
+     max-width: 900px;
      height: 300px;
      position: relative;
      margin: auto;
 }
 .carrouselprod{
-   width: 350px;
-   height: 150px;
+   width: 900px;
+   height: 300px;
    background-color: #444;
 }
 
@@ -526,7 +526,8 @@ html, body {
      .centered-form {
           margin: 10% 0;
      }
-     .centered-form input {
+     input {
+          height: 40px;
           margin: 0;
           font-size: 17px;
           border: 1px solid #bbb;
