--- a/static/css/style.css
+++ b/static/css/style.css
@@ -356,31 +356,56 @@ html, body {
 /*****************************************************************/
 
 
-/*********************Carrousel************************************/
-
-/************Modal************/
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: black;
+/*********************Galería************************************/
+.borde_foto, .foto_mediana{
+    border-style: solid;
+    border-color: transparent;
+    border-radius: 5%;
+    position:relative;
+    display:inline-block;
+    top:10px;
 }
 
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
+.borde_foto {
+     margin-right: 10px;
+     width:100px;
+     height: 80px;
 }
+
+.foto_mediana{
+    width:300px;
+    height: 150px;
+}
+
+.foto_grande{
+	position:relative;
+	top:20%;
+    display:inline-block;
+	width:900px;
+     height: 300px;
+}
+
+.overlay{
+    position:fixed;
+    width:100%;
+    height: 100%;
+    top:0;
+    z-index: 10;
+    background: #000000;
+    opacity: 0.7;
+    visibility: hidden;
+}
+
+.ventana{
+    position:absolute;
+    width:100%;
+    height: 100%;
+    top:0;
+    z-index: 11;
+    visibility: hidden;
+    text-align:center;
+}
+
 
 /* Slideshow container */
 
