--- a/static/css/style.css
+++ b/static/css/style.css
@@ -368,21 +368,14 @@ html, body {
 
 .borde_foto {
      margin-right: 10px;
-     width:100px;
-     height: 80px;
-}
-
-.foto_mediana{
-    width:300px;
-    height: 150px;
 }
 
 .foto_grande{
 	position:relative;
 	top:20%;
     display:inline-block;
-	width:900px;
-     height: 300px;
+	/*width:100%;*/
+     /*height: 400px;*/
 }
 
 .overlay{
@@ -390,17 +383,22 @@ html, body {
     width:100%;
     height: 100%;
     top:0;
+    left:0;
     z-index: 10;
     background: #000000;
     opacity: 0.7;
     visibility: hidden;
+    overflow: hidden;
 }
 
 .ventana{
     position:absolute;
+    box-sizing: border-box;
+    padding: 0 10%;
     width:100%;
     height: 100%;
     top:0;
+    left:0;
     z-index: 11;
     visibility: hidden;
     text-align:center;
