--- a/static/css/style.css
+++ b/static/css/style.css
@@ -370,6 +370,10 @@ html, body {
      margin-right: 10px;
 }
 
+.borde_foto:hover {
+     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .foto_grande{
 	position:relative;
 	top:20%;
