--- a/templates/servicios.html
+++ b/templates/servicios.html
@@ -1,40 +1,40 @@
 <div class="onehalf first">
   <h1>Impresión</h1>
-  <img class="imagenservicios" src="/static/images/impresion.png">
+  <img class="imagenservicios" src="static/images/impresion.png">
   <p class="parrafoservicios">Ofrecemos servicios de impresión a empresas de cualquier sector, ya que contamos con equipos de impresión de alto volumen y tecnología de alta definición de imagen, en blanco y negro o en color, tanto en entorno de PC como Mac.</p>
 </div>
 <div class="onehalf last">
   <h1>Cartelería</h1>
-  <img class="imagenservicios" src="/static/images/carteleria.png">
+  <img class="imagenservicios" src="static/images/carteleria.png">
   <p class="parrafoservicios">Para trabajos de cartelería exterior e interior (orientada a fachadas, vehículos, vallas, ferias, congresos, exposiciones, lonas y textiles publicitarios...).</p>
 </div>
 <div class="onehalf first">
   <h1>Fotocopias</h1>
-  <img class="imagenservicios" src="/static/images/fotocopias.png">
+  <img class="imagenservicios" src="static/images/fotocopias.png">
   <p class="parrafoservicios">El número de fotocopias que desee, en el mismo formato que los ha recibido. Ampliados o reducidos a cualquier formato. Modificados y maquetados según el criterio del cliente.</p>
 </div>
 <div class="onehalf last">
   <h1>Vinilos & Camisetas</h1>
-  <img class="imagenservicios" src="/static/images/viniloscamisetas.png">
+  <img class="imagenservicios" src="static/images/viniloscamisetas.png">
   <p class="parrafoservicios">Impresión de camisetas personalizadas: diseña la tuya para fiestas, equipos deportivos y mucho más. Estampación con vinilo impreso y de corte en camisetas, polos, sudaderas, camisas, etc.</p>
 </div>
 <div class="onehalf first">
   <h1>Planos</h1>
-  <img class="imagenservicios" src="/static/images/impresion.png">
+  <img class="imagenservicios" src="static/images/impresion.png">
   <p class="parrafoservicios">Con infraestructura de última tecnología para fotocopiar, plotear y escanear planos en blanco y negro o color.</p>
 </div>
 <div class="onehalf last">
   <h1>Encuadernación</h1>
-  <img class="imagenservicios" src="/static/images/encuadernacion.png">
+  <img class="imagenservicios" src="static/images/encuadernacion.png">
   <p class="parrafoservicios">La encuadernación es el último proceso de la cadena de impresión y lo que confiere a sus trabajos una terminación estética y de calidad.</p>
 </div>
 <div class="onehalf first">
   <h1>Plastificados</h1>
-  <img class="imagenservicios" src="/static/images/papeleria.png">
+  <img class="imagenservicios" src="static/images/papeleria.png">
   <p class="parrafoservicios">Proponemos soluciones para proteger sus trabajos, desde esos documentos de mucho uso como carnets y tarjetas, cartas y menús, hasta carteles y posters para interior o exterior.</p>
 </div>
 <div class="onehalf last">
   <h1>Papelería</h1>
-  <img class="imagenservicios" src="/static/images/papeleria.png">
+  <img class="imagenservicios" src="static/images/papeleria.png">
   <p class="parrafoservicios">Disponemos de material indispensable para el funcionamiento diario de cualquier oficina, ponemos a su disposición gran variedad de productos.</p>
 </div>
