Añadido link al código en GitHub en el footer

--- a/templates/core/footer.html
+++ b/templates/core/footer.html
@@ -4,6 +4,8 @@
 <div class="footer">
   ©2017 COPISTERIA COLOR DIGITAL
   <br>
+  <a target="_blank" href="https://github.com/MikelArdanaz/Siw-17" class="github">Consulta el código de esta página en GitHub!</a>
+  <br>
   <a href="controlador.php?accion=legal&id=1">legal</a>
 </div>
 ##scriptparausuarios##
