--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,14 +65,16 @@ html, body {
 /******************footer************************/
 
 .footer {
-     height: 40px;
+     height: 60px;
      width: 100%;
      background-color: #666;
      text-align: center;
      color: #eee;
      text-transform: uppercase;
 }
-
+.github{
+   text-transform: none;
+}
 .footer a {
      text-decoration: none;
 }
