--- a/templates/nuevo.html
+++ b/templates/nuevo.html
@@ -18,8 +18,9 @@
          <div class="dropzone" id="dropzonewidget"></div>
       </div>
    </div>
-   <input type="reset" value="Borrar" />
-   <input type="submit" id="submit-all" value="Enviar" />
+   <input class='botonesbonitos' type="reset" value="Borrar" />
+   <br>
+   <input class='botonesbonitos' type="submit" id="submit-all" value="Enviar" />
 </form>
 <div id="respuesta"></div>
 <script type="text/javascript">
