--- a/templates/productoamodificar.html
+++ b/templates/productoamodificar.html
@@ -19,10 +19,13 @@
          <div class="dropzone" id="dropzonewidget"></div>
       </div>
    </div>
-   <input type="reset" class="botonesbonitos" value="Borrar" />
-   <input type="submit" class="botonesbonitos" id="submit-all" value="Enviar" />
+   <input class="botonesbonitos" type="reset"  value="Borrar" />
+   <br>
+   <input class="botonesbonitos" type="submit"  id="submit-all" value="Enviar" />
 </form>
 ##botoneliminarproducto##
+<br>
+<br>
 <div id="respuesta"></div>
 <script type="text/javascript">
    Dropzone.options.dropzonewidget = {
