--- a/templates/producto.html
+++ b/templates/producto.html
@@ -9,15 +9,18 @@
 <p>##descripcion##</p>
 <h2>##precio##€</h2>
 <h2>Comentarios</h2>
-<p>##comentarios##</p>
+<div class="comentarios">
+  ##comentarios##
+</div>
 ##parausuarios##
 
 <form action="controlador.php?accion=nuevocomentario&id=1" enctype="multipart/form-data" method="post">
      <h2>Añadir nuevo comentario</h2>
      <textarea name="comentario" id="comentario" ></textarea><br>
      ##id##
-     <input type="submit" value="Enviar">
+     <input class="botonesbonitos" type="submit" value="Enviar">
 </form>
+<br>
 
 <button id="botonfavoritos" type="button" class="botonesbonitos" name="button" onclick="favoritosv()">##favorito##</button>
 <div id="error" class="alert-box failure">Algo ha fallado</div>
